/region/temperature/min?xMin=<xMin>&xMax=<xMax>&yMin=<yMin>&yMax=<yMax>&zMin=<zMin>&zMax=<zMax>: current minimum temperature inside the region****;**** region here and below is an area represented by the range of coordinates
