# docs/swagger.yaml
@@ -150,6 +150,57 @@ paths:
       summary: This endpoint can be used as health check for this application.
       tags:
       - Health
+  /region/temperature/min:
+    get:
+      description: Get the minimum temperature detected by sensors in the region.
+      operationId: get-region-min-temperature
+      parameters:
+      - description: Min X
+        in: query
+        name: xMin
+        required: true
+        type: integer
+      - description: Max X
+        in: query
+        name: xMax
+        required: true
+        type: integer
+      - description: Min Y
+        in: query
+        name: yMin
+        required: true
+        type: integer
+      - description: Max Y
+        in: query
+        name: yMax
+        required: true
+        type: integer
+      - description: Min Z
+        in: query
+        name: zMin
+        required: true
+        type: integer
+      - description: Max Z
+        in: query
+        name: zMax
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: integer
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get Region Min Temperature
   /sensor/{codeName}/temperature/average:
     get:
       description: Get the average temperature detected by a particular sensor between
