# internal/infra/http/controllers/sensor_controller.go
@@ -83,3 +83,95 @@ func (c SensorController) GetSensorTemperatureAverage() http.HandlerFunc {
 
 	}
 }
+
+// @Summary Get Region Min Temperature
+// @Description Get the minimum temperature detected by sensors in the region.
+// @ID get-region-min-temperature
+// @Param xMin query int true "Min X"
+// @Param xMax query int true "Max X"
+// @Param yMin query int true "Min Y"
+// @Param yMax query int true "Max Y"
+// @Param zMin query int true "Min Z"
+// @Param zMax query int true "Max Z"
+// @Produce json
+// @Success 200 {object} int64
+// @Failure 400 {string} http.StatusBadRequest
+// @Failure 500 {string} http.StatusInternalServerError
+// @Router /region/temperature/min [get]
+func (c SensorController) GetRegionMinTemperature() http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+
+		xMinStr := r.URL.Query().Get("xMin")
+		xMaxStr := r.URL.Query().Get("xMax")
+
+		yMinStr := r.URL.Query().Get("yMin")
+		yMaxStr := r.URL.Query().Get("yMax")
+
+		zMinStr := r.URL.Query().Get("zMin")
+		zMaxStr := r.URL.Query().Get("zMax")
+
+		if xMinStr == "" || xMaxStr == "" || yMinStr == "" || yMaxStr == "" || zMinStr == "" || zMaxStr == "" {
+			err := errors.New("some region parameters are missing")
+			log.Printf("SensorController: %s", err)
+			BadRequest(w, err)
+			return
+		}
+
+		xMin, err := strconv.ParseFloat(xMinStr, 64)
+		if err != nil {
+			err = errors.New("xMin parameter is not valid")
+			log.Printf("SensorController: %s", err)
+			BadRequest(w, err)
+			return
+		}
+
+		xMax, err := strconv.ParseFloat(xMaxStr, 64)
+		if err != nil {
+			err = errors.New("xMax parameter is not valid")
+			log.Printf("SensorController: %s", err)
+			BadRequest(w, err)
+			return
+		}
+
+		yMin, err := strconv.ParseFloat(yMinStr, 64)
+		if err != nil {
+			err = errors.New("yMin parameter is not valid")
+			log.Printf("SensorController: %s", err)
+			BadRequest(w, err)
+			return
+		}
+
+		yMax, err := strconv.ParseFloat(yMaxStr, 64)
+		if err != nil {
+			err = errors.New("yMax parameter is not valid")
+			log.Printf("SensorController: %s", err)
+			BadRequest(w, err)
+			return
+		}
+
+		zMin, err := strconv.ParseFloat(zMinStr, 64)
+		if err != nil {
+			err = errors.New("zMin parameter is not valid")
+			log.Printf("SensorController: %s", err)
+			BadRequest(w, err)
+			return
+		}
+
+		zMax, err := strconv.ParseFloat(zMaxStr, 64)
+		if err != nil {
+			err = errors.New("zMax parameter is not valid")
+			log.Printf("SensorController: %s", err)
+			BadRequest(w, err)
+			return
+		}
+
+		regionMinTemperature, err := c.sensorService.GetRegionMinTemperature(xMin, yMin, zMin, xMax, yMax, zMax)
+		if err != nil {
+			log.Printf("SensorController: %s", err)
+			InternalServerError(w, err)
+			return
+		}
+		Success(w, regionMinTemperature)
+
+	}
+}
